--- a/Site.Master
+++ b/Site.Master
@@ -13,6 +13,7 @@
           bottom: 0;
           width: 100%;
           text-align: center;
+          background: white;
         }
     </style>
     <asp:ContentPlaceHolder ID="head" runat="server"></asp:ContentPlaceHolder>
@@ -29,11 +30,10 @@
                 <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item"><a class="nav-link" runat="server" href="~/">Vault</a></li>
-                        <li class="nav-item"><a class="nav-link" runat="server" href="~/Settings.aspx">Settings</a></li>
                     </ul>
 
                     <div class="d-flex justify-content-end">
-                        <asp:TextBox CssClass="form-control mr-sm-2" placeholder="Search for Passwords" ID="txtSearch" runat="server"></asp:TextBox>
+                        <asp:TextBox CssClass="form-control mr-sm-2" placeholder="Search (Case Sensitive)" ID="txtSearch" runat="server"></asp:TextBox>
                         &nbsp;&nbsp;<asp:Button CssClass="btn btn-outline-success my-2 my-sm-0" Text="Search" runat="server" ID="btnSearch" OnClick="BtnSearch_Click" CausesValidation="false" /> &nbsp;&nbsp;&nbsp;&nbsp;
                         <ul class ="navbar-nav flex-grow-1"><li class="nav-item"><a class="nav-link" id="btnLogout" runat="server" href="~/Login.aspx">Logout</a></li></ul>
                     </div>
